--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </style>
 </head>
 
-<body>
+<body bgcolor="BLACK" text="YELLOW">
 
     <!-- NAVIGATION BAR HTML -->
     <div class="navigation">
@@ -43,7 +43,7 @@
             </style>
         </head>
 
-        <body class="">
+        <body class="" text="BLACK" bgcolor="RED">
 
             <button onclick="myFunction()">Dark/Light Mode</button>
 
