--- a/Write_Program_in_any_lang/helloworld.html
+++ b/Write_Program_in_any_lang/helloworld.html
@@ -15,8 +15,8 @@
         }
     </style>
 </head>
-<body>
-   <h1>Hello World!! <span style = "display: block;">
-    Hacktoberfest 2020</span></h1>
+<body bgcolor="RED" text="BLACK">
+   <CENTER><I><B><h2>Hello World!! <span style = "display: block;">
+       Hacktoberfest 2020</span></h2></B></I></CENTER>
 </body>
 </html>
