--- a/Write_Program_in_any_lang/HTML/index.html
+++ b/Write_Program_in_any_lang/HTML/index.html
@@ -1,4 +1,8 @@
 <html>
+ <head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+    </head>
+    <title> Basic Program </title>
     <body>
         this is trial page one 
     </body>
